[package]
name = "natpmp-setup"
version = "0.1.0"
authors = ["FuseTim <fusetim@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
natpmp = "0.3.2"
anyhow = "*"
reqwest = { version = "0.11", default_features = false, features = ["blocking"] }