[package]
authors = ["FuseTim <fusetim@gmx.com>", "sdwilsh@pm.me"]
edition = "2021"
license = "MIT"
name = "transmission-protonvpn"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
natpmp = "0.3.2"
anyhow = "*"
reqwest = { version = "0.11", default_features = false, features = ["blocking"] }
